# wisp

./: .gitignore  AGENTS.md  Cargo.toml  README.md  tmux_sessionx_rust_plan.md  wisp_sidebar_extension_plan.md
.cargo/: config.toml
.github/workflows/: ci.yml  prepare-release.yml  release.yml
crates/wisp-app/: Cargo.toml
crates/wisp-app/src/: lib.rs
crates/wisp-bin/: Cargo.toml
crates/wisp-bin/src/: git.rs  main.rs
crates/wisp-bin/tests/: smoke.rs
crates/wisp-config/: Cargo.toml
crates/wisp-config/src/: lib.rs
crates/wisp-core/: Cargo.toml
crates/wisp-core/benches/: projections.rs
crates/wisp-core/src/: action.rs  candidate.rs  domain.rs  lib.rs  preview.rs  reduce.rs  view.rs
crates/wisp-embers/: Cargo.toml
crates/wisp-embers/src/: lib.rs
crates/wisp-embers/tests/: integration.rs
crates/wisp-fuzzy/: Cargo.toml
crates/wisp-fuzzy/src/: lib.rs
crates/wisp-kindra/: Cargo.toml
crates/wisp-kindra/src/: lib.rs
crates/wisp-kindra/tests/: integration.rs
crates/wisp-preview/: Cargo.toml
crates/wisp-preview/src/: lib.rs
crates/wisp-status/: Cargo.toml
crates/wisp-status/benches/: formatting.rs
crates/wisp-status/src/: lib.rs
crates/wisp-tmux/: Cargo.toml
crates/wisp-tmux/src/: lib.rs
crates/wisp-tmux/tests/: integration.rs
crates/wisp-ui/: Cargo.toml
crates/wisp-ui/src/: lib.rs
crates/wisp-zoxide/: Cargo.toml
crates/wisp-zoxide/src/: lib.rs
crates/wisp-zoxide/tests/: integration.rs
docs/: architecture.md  config.schema.toml  configuration.md
scripts/: release.sh
