[workspace]
members = [
    "crates/wisp-app",
    "crates/wisp-bin",
    "crates/wisp-config",
    "crates/wisp-core",
    "crates/wisp-fuzzy",
    "crates/wisp-preview",
    "crates/wisp-tmux",
    "crates/wisp-ui",
    "crates/wisp-zoxide",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
unnecessary_wraps = "warn"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_ignored = "0.1"
thiserror = "2"
toml = "0.8"
