[workspace]
members = [
    "crates/wisp-app",
    "crates/wisp-bin",
    "crates/wisp-config",
    "crates/wisp-core",
    "crates/wisp-fuzzy",
    "crates/wisp-preview", "crates/wisp-status",
    "crates/wisp-tmux",
    "crates/wisp-ui",
    "crates/wisp-zoxide",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
license = "MIT"
repository = "https://github.com/Pajn/wisp"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
unnecessary_wraps = "warn"

[workspace.dependencies]
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_ignored = "0.1"
thiserror = "2"
toml = "0.8"
wisp-app = { version = "0.1.0", path = "crates/wisp-app" }
wisp-config = { version = "0.1.0", path = "crates/wisp-config" }
wisp-core = { version = "0.1.0", path = "crates/wisp-core" }
wisp-fuzzy = { version = "0.1.0", path = "crates/wisp-fuzzy" }
wisp-preview = { version = "0.1.0", path = "crates/wisp-preview" }
wisp-status = { version = "0.1.0", path = "crates/wisp-status" }
wisp-tmux = { version = "0.1.0", path = "crates/wisp-tmux" }
wisp-ui = { version = "0.1.0", path = "crates/wisp-ui" }
wisp-zoxide = { version = "0.1.0", path = "crates/wisp-zoxide" }
