[package]
name = "wisp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "tmux-aware workspace navigator and status UI"

[[bin]]
name = "wisp"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
pkg-fmt = "tgz"
bin-dir = "{ name }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
bin-dir = "{ name }.exe"

[dependencies]
argh = "0.1"
crossterm.workspace = true
ratatui.workspace = true
wisp-app.workspace = true
wisp-config.workspace = true
wisp-core.workspace = true
wisp-fuzzy.workspace = true
wisp-preview.workspace = true
wisp-status.workspace = true
wisp-tmux.workspace = true
wisp-ui.workspace = true
wisp-zoxide.workspace = true

[lints]
workspace = true
