[package]
name = "wisp-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "configuration loading and validation for Wisp"

[dependencies]
serde.workspace = true
serde_ignored.workspace = true
thiserror.workspace = true
toml.workspace = true

[lints]
workspace = true
