[package]
name = "wisp-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "core domain model and projections for Wisp"

[dependencies]

[lints]
workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "projections"
harness = false
