[package]
name = "wisp-embers"
version = "0.2.0"
edition = "2024"
rust-version = "1.95.0"
license = "MIT"
repository = "https://github.com/Pajn/wisp"
description = "Embers backend adapter for Wisp"

[dependencies]
embers-client = "0.1.0"
embers-core = "0.1.0"
embers-protocol = "0.1.0"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

[dev-dependencies]
embers-test-support = "0.1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[lints.rust]
unsafe_code = "forbid"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
unnecessary_wraps = "warn"
