[package]
name = "wisp-preview"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "preview generation and caching for Wisp"

[dependencies]
thiserror.workspace = true
wisp-core.workspace = true
wisp-tmux.workspace = true

[lints]
workspace = true
