[package]
name = "wisp-status"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "tmux status-line formatting for Wisp"

[dependencies]
wisp-core.workspace = true

[lints]
workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "formatting"
harness = false
