[package]
name = "wisp-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "shared terminal UI renderers for Wisp"

[dependencies]
crossterm.workspace = true
ratatui.workspace = true
wisp-core.workspace = true
wisp-fuzzy.workspace = true

[lints]
workspace = true
